# updater-tool

./: CMakeLists.txt
cmake/: FindDBus.cmake  FindGLib.cmake  FindOSTree.cmake
src/: CMakeLists.txt  check.cxx  main.cxx  ping.cxx  server.cxx  server.hxx
